v0.8.7
------
- New MX-5 'Hermes' nuclear reactor
- New model for 3.75m FLAT nuclear reactor
- Radial capacitors are now physicsless

v0.8.6
------
- Fixed animation corruption on Whirlijig model
- Fixed obsolete normal map on Whirlijig model

v0.8.5
------
- Changed surface attach mode of Whirlijig to allow surface attachments on some areas of the part
- Fixed USI Patch PDU fuel rate

v0.8.4
------
- Update B9PartSwitch to 1.7.1
- Updated CRP to 0.6.6
- Fixed download link in .version file
- Fixed costs of nuclear fuel containers
- Fixed a rogue logging spam
- Fixed a null reference exception when starting a reactor for the first time

v0.8.3
------
- Marked for KSP 1.2.2
- Updated bundled MM to 2.7.5
- Updated bundled B9PartSwitch to 1.5.3
- Updated bundled CRP to 0.6.4
- Fixed capacitor discharge rate not being correct
- Fixed nuclear reactors not properly adjusting their fuel use
- Spelling/comprehension fixes
- Significant improvements, fixes to USI integrations from Wyzard256

v0.8.2
------
- Marked for KSP 1.2.1
- Updated bundled MM to 2.7.4
- Updated bundled CRP
- Fixed reactor UI panel's hardcoded max safety shutdown temp (adapts to reactor)
- Fixed auto-shutdown temperature resetting on revert to VAB
- Capacitors now recharge in the background if ship EC is > 25%
- Capacitor discharge slider is now directly tied to discharge instead of being a percentage
- FissionFlowRadiator now shows current cooling in its UI
- FissionFlowRadiator cooling is now more forgiving and linear
- FissionReactor auto-throttle obeys engine tweakable throttle
- New models for all nuclear fuel containers

v0.8.1
------
- Updated CRP to v6.0.1
- Reactor safety slider will now auto-adjust to the meltdown temperature of the reactor
- Improved the VAB GUI display of reactor attributes
- Improved the VAB GUI display of exhaust cooling attributes

v0.8.0
------
- KSP 1.2
- Some performance and code improvements
- Removed Radioactivity patch (should really be *in* Radioactivity)